wip: projectCard component

--- a/src/styles/projectCard.scss
+++ b/src/styles/projectCard.scss
@@ -1,8 +1,15 @@
 .project-card {
   .project-info {
+    label {
+    }
     .project-links {
       .project-link {
+        .link-button {
+        }
       }
+    }
+
+    .project-tags {
     }
   }
 }
