--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -1,5 +1,9 @@
 .about {
   padding-bottom: 40px;
+  height: 90vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 
   .about-top {
     display: flex;
@@ -7,17 +11,21 @@
     align-items: center;
 
     .about-info {
-      font-size: 24px;
+      font-size: 2vw;
 
       span {
         color: blue;
-        font-size: 32px;
+        font-size: 3vw;
       }
     }
     .about-photo {
+      width: 70%;
+      display: flex;
+      justify-content: flex-end;
       img {
         border-radius: 50%;
-        height: 350px;
+        height: auto;
+        width: 80%;
         margin: 10px;
       }
     }
@@ -40,8 +48,12 @@
         }
       }
       .about-photo {
+        display: flex;
+        justify-content: center;
+        width: 100%;
         img {
-          height: 250px;
+          //height: 250px;
+          margin-top: 60px;
         }
       }
     }
