--- a/src/styles/mobile.scss
+++ b/src/styles/mobile.scss
@@ -11,7 +11,7 @@
   
     .close-icon {
       display: flex;
-      justify-content: end;
+      justify-content: flex-end;
       font-size: 24px;
     }
   
