feature: material icons and styles and html structure

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -43,6 +43,7 @@
       align-items: center;
       .about-info {
         font-size: 20px;
+        text-align: center;
         span {
           font-size: 26px;
         }
