--- a/src/styles/projectCard.scss
+++ b/src/styles/projectCard.scss
@@ -25,7 +25,7 @@
         .link-button {
           display: flex;
           justify-content: center;
-          align-items: center;
+          //align-items: center;
           background-color: aquamarine;
           width: max-content;
           padding: 4px 8px;
