--- a/src/styles/body.scss
+++ b/src/styles/body.scss
@@ -1,4 +1,9 @@
-.body{
-    padding: 12px;
-    padding-bottom: 36px;
+.body {
+  padding: 12px;
+  padding-bottom: 36px;
+
+  .section-title {
+    font-size: 32px;
+    font-weight: 700;
+  }
 }
