--- a/src/styles/mobile.scss
+++ b/src/styles/mobile.scss
@@ -1,45 +1,57 @@
+.block-div {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background: gray;
+  opacity: 0.5;
+}
 .mobile {
-    background-color: white;
-    height: calc(100vh - 30px);
-    width: 60vw;
-    position: absolute;
-    right: 0px;
-    top: -6px;
-    padding: 18px 12px;
+  background-color: white;
+  height: calc(100vh - 30px);
+  width: 50vw;
+  position: fixed;
+  right: 0px;
+  top: -6px;
+  padding: 18px 12px;
+  display: flex;
+  flex-direction: column;
+  z-index: 3;
+  box-shadow: rgb(0 0 0 / 20%) 0px 8px 10px -5px,
+    rgb(0 0 0 / 14%) 0px 16px 24px 2px, rgb(0 0 0 / 12%) 0px 6px 30px 5px;
+
+
+  .close-icon {
+    display: flex;
+    justify-content: flex-end;
+    font-size: 24px;
+  }
+
+  .mobile-options {
     display: flex;
     flex-direction: column;
-  
-    .close-icon {
-      display: flex;
-      justify-content: flex-end;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    padding-top: 24px;
+
+    .mobile-option {
       font-size: 24px;
-    }
-  
-    .mobile-options {
+      margin: 12px 0;
       display: flex;
-      flex-direction: column;
-      justify-content: center;
       align-items: center;
-      height: 100%;
-      width: 100%;
-      padding-top: 24px;
-  
-      .mobile-option {
-        font-size: 24px;
-        margin: 12px 0;
+
+      a {
         display: flex;
         align-items: center;
-  
-        a {
-          display: flex;
-          align-items: center;
-        }
-  
-        .option-icon {
-          display: flex;
-          align-items: center;
-        }
+      }
+
+      .option-icon {
+        display: flex;
+        align-items: center;
       }
     }
   }
-  
+}
