--- a/src/styles/mobile.scss
+++ b/src/styles/mobile.scss
@@ -1,63 +1,36 @@
-.block-div {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-  background: gray;
-  opacity: 0.5;
-  z-index: 2;
-}
-.mobile {
-  background-color: white;
-  height: 101vh;
-  width: 0;
-  position: fixed;
-  right: 0px;
-  top: -6px;
-  //padding: 18px 12px;
+.mobile-options {
   display: flex;
   flex-direction: column;
-  z-index: 3;
-  box-shadow: rgb(0 0 0 / 20%) 0px 8px 10px -5px,
-    rgb(0 0 0 / 14%) 0px 16px 24px 2px, rgb(0 0 0 / 12%) 0px 6px 30px 5px;
-  overflow: hidden;
-  transition: 0.3s;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
 
-  .close-icon {
-    padding-top: 18px;
-    padding-right: 26px;
-    display: flex;
-    justify-content: flex-end;
+  .mobile-option {
     font-size: 24px;
-  }
-
-  .mobile-options {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+    padding: 12px 0;
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-    .mobile-option {
-      font-size: 24px;
-      margin: 12px 0;
+
+    &:hover{
+      background-color: #f4f4f4;
+    }
+
+    a {
       display: flex;
       align-items: center;
+    }
 
-      a {
-        display: flex;
-        align-items: center;
-      }
-
-      .option-icon {
-        display: flex;
-        align-items: center;
-      }
+    .option-icon {
+      display: flex;
+      align-items: center;
     }
   }
 }
+
 .drawer {
   width: 250px;
   //padding: 18px 12px;
