--- a/src/styles/skillCard.scss
+++ b/src/styles/skillCard.scss
@@ -11,12 +11,15 @@
 
   .skill-icon {
     font-size: 60px;
+
+    img {
+      height: 60px;
+    }
   }
 
   .skill-name {
     font-size: 18px;
   }
-
 }
 @media only screen and(max-width: 720px) {
   .skill-card {
@@ -24,6 +27,10 @@
 
     .skill-icon {
       font-size: 40px;
+
+      img {
+        height: 40px;
+      }
     }
 
     .skill-name {
