--- a/src/styles/skillCard.scss
+++ b/src/styles/skillCard.scss
@@ -1,9 +1,8 @@
 .skill-card {
-  width: max-content;
-  padding: 8px 16px;
-  margin: 6px;
-  border-radius: 8px;
+  width: 120px;
   height: 120px;
+  margin: 16px;
+  border-radius: 8px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -23,7 +22,9 @@
 }
 @media only screen and(max-width: 720px) {
   .skill-card {
-    height: 100px;
+    width: 93px;
+    height: 90px;
+    margin: 8px;
 
     .skill-icon {
       font-size: 40px;
@@ -34,6 +35,7 @@
     }
 
     .skill-name {
+      font-size: 14px;
     }
   }
 }
